# website-RS-React

./: .gitignore  compose.yaml
backend/: Cargo.toml  diesel.toml  dockerfile
backend/.sqlx/: query-177a3eff2a2789b77f296a223e89cbca31e5c6ebd7790d322d9201caea86ff20.json  query-46ccf407dd3fd10ef5bdbc74c2da952a0ef8d06784a2efb0c7e567990735b68e.json  query-c4138e00e598597dcf0cec8f52987954f75e8a2c7a7c6d3b4222750e7f86f66f.json  query-d0551a56a77dfc530ceb4dc5e2781184b196f13752227f6b8f408aa318aca085.json  query-f1c4d619b8480ebf4f6b10395fa3e5992b9e8c71ecdeb8476088d425ad870241.json
backend/migrations/: 001_create_roles_table.sql  002_create_account_status_table.sql  003_create_users_table.sql  004_create_activity_logs.sql  20250104020637_create_users_table.sql  20250107015029_create_activity_logs.sql
backend/migrations/2025-01-03-223918_create_users_table/: up.sql
backend/src/: auth.rs  db.rs  errors.rs  main.rs
backend/src/entities/: prelude.rs  users.rs
backend/src/models/: models.rs  schema.rs
backend/src/routes/: admin.rs  log.rs  login.rs  mod.rs  profile.rs  route.rs  signup.rs  validate.rs
database/: compose.yaml  db.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  Index.jsx
frontend/src/pages/: AdminDashboard.jsx  Login.jsx  Profile.jsx  Signup.jsx
