[package]
name = "website-test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
# sea-orm = { version = "1.1.3", features = [
#   "sqlx-postgres",
#   "runtime-tokio",
#   "macros",
# ] }
diesel = { version = "2.2.6", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
deadpool = { version = "0.12.1" }
bcrypt = "0.16.0"
axum = { version = "0.8.1" }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = "0.4.0"
tower-http = { version = "0.6.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
chrono = "0.4.19"
