[package]
name = "website-test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
bcrypt = "0.16.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = "0.4.0"
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
chrono = "0.4.39"
thiserror = "2.0.9"
